[gd_scene load_steps=3 format=3 uid="uid://2pkr4cenl8wu"]

[ext_resource type="Script" uid="uid://b5pvc0gju8ygu" path="res://main_menu.gd" id="1_ixr3m"]
[ext_resource type="PackedScene" uid="uid://csa8cegur6sm6" path="res://file_dialog_set_file_paths.tscn" id="2_s3c41"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ixr3m")

[node name="ButtonMapEditor" type="Button" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 211.0
offset_bottom = 44.0
text = "Map Editor"

[node name="ButtonEventEditor" type="Button" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 11.0
offset_top = 53.0
offset_right = 211.0
offset_bottom = 84.0
text = "Event Editor"

[node name="ButtonSetFilePaths" type="Button" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 12.0
offset_top = 93.0
offset_right = 212.0
offset_bottom = 124.0
text = "Set Filepaths"

[node name="FileDialogSetFilePaths" parent="." instance=ExtResource("2_s3c41")]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 100.0
offset_right = 272.0
offset_bottom = 123.0
text = "To set the filepath location properly, select the folder:
 ooch_bot/Maps

If the config is broken it can be accessed and then deleted at:
%appdata%/Godot/app_userdata/oochamon_level_editor/oochabot_config.cfg"

[connection signal="pressed" from="ButtonMapEditor" to="." method="_on_button_map_editor_pressed"]
[connection signal="pressed" from="ButtonEventEditor" to="." method="_on_button_event_editor_pressed"]
[connection signal="pressed" from="ButtonSetFilePaths" to="." method="_on_button_set_file_paths_pressed"]
[connection signal="dir_selected" from="FileDialogSetFilePaths" to="." method="_on_file_dialog_set_file_paths_dir_selected"]
